tests/src/frontend/typechecking/invalid/missing_function.sk
fun main(): void {
  print_raw("" % 5)
}
